
2001-10-22 Daniel Horn <hellcatv@hotmail.com>
	* modified units to go in <data>/unit/<unitname> or <data>/unit/<factionname>/<unitname>
	* modified textures go either in the "current dir" or in <data>/textures/ for shared textures
	* modified sounds to either go in the current dir or <data>/sounds
	* modified animations to go in <currentdir>/animations
	* modified sprites to go in <currentdir>/sprites
	* allowed flat data directories too :-)

2001-10-21 Daniel Horn <hellcatv@hotmail.com>

	* added Sound support
	* added buffers share preloaded sounds
	* added heuristic that will take X sounds of one type and N closest sounds
	* modified weapon sounds to be present on the mount (with exception of beams)
	* added sounds in unit config file and global config file for common things like explosions, etc
	* added music that will determine the "badness" of current situation and play sounds accordingly


2001-10-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added mapping from string to KBHandler to config_xml
	* modified firekeyboard.h
	  the static void xxKey(int, KBSTATE) are now public
	   to be used in config_xml
	* removed config tests from main.cpp
	* uncommented old BindKeys(..) in FlyByKeyboard::FlyByKeyboard 
	* uncommented old BindKeys(..) in FireKeyboard
	* uncommented old BindKeys(..) in main_loop:InitializeInput
	* added cockpit-callbacks to main_loop.h
	  gave it namespace CockpitKeys
	* added bindings to vegastrike.config
	

2001-10-20 Alexander Rawass <alexannika@users.sourceforge.net>

	* added variables and colors to vegastrike.config
	* renamed vegaconfig.* to config_xml.* (Daniel's request)
	* modified src/Makefile.am (vegaconfig to config_xml)
	* modified includes in config_xml.cpp, main.cpp and many more ;-)
	* modified TODO/Jobs list
	

2001-10-20 Daniel Horn <hellcatv@hotmail.com>

	* added maximum range and cone functions to various radars
	* added color utilization to the radar 